# stuffkeeper

./: .gitignore  TODO.md
backend/: .env.example  README.md  alembic.ini  pyproject.toml
backend/Docker/: Dockerfile
backend/alembic/: env.py
backend/alembic/versions/: 839fff2a2af8_add_cost_field_to_items.py  edcfc55efde8_init.py
backend/backend/: .env.tmpl  crud.py  database.py  main.py  models.py  schemas.py  security.py
backend/backend/scripts/: create_test_data.py
frontend/: README.md  package-lock.json  package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.css  App.js  index.js
frontend/src/components/: ErrorPage.js  GlobalLoading.js  Login.js  Root.js  SignIn.js  SignOut.js
frontend/src/hooks/: useToken.js
frontend/src/services/: backend.js  store.js  token.js  utils.js
frontend/src/views/: AdminView.js  ItemEdit.js  ItemView.js  Items.js  ItemsView.js  NotFoundView.js  StatsView.js
